# fusabi-plugin-runtime

./: CHANGELOG.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  STRUCTURE.md
docs/versions/vNEXT/: capabilities.md  host-profiles.md  hot-reload.md  manifest-schema.md  migration.md  multi-process.md  runtime-guide.md
examples/: hot_reload.rs  plugin_loader.rs
src/: error.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  metrics.rs  plugin.rs  registry.rs  runtime.rs  watcher.rs
tests/: integration.rs
